<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_300sdp"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_25sdp">

            <TextView
                android:id="@+id/txtTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_rate_me"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/txtAboutRateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hi_if_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/black_blure"></View>


            <TextView
                android:id="@+id/txtYesTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_blure"></View>


            <TextView
                android:id="@+id/txtMaybeLaterTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maybe_later"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_blure"></View>


            <TextView
                android:id="@+id/txtNoThanksTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_thanks"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>







</LinearLayout>